--- a/index.html
+++ b/index.html
@@ -23,15 +23,19 @@
                 extend: {
                     colors: {
                         clifford: '#da373d',
+                       'nav-btn': '#ABEF5F',
                     }
                 }
             }
         }
     </script>
-
+<style>
+    .font-manrope{
+        font-family: "Manrope", sans-serif;
+    }
+</style>
 </head>
-
-<body>
+<body class="font-manrope">
     <header class="md:container mx-auto">
         <nav>
             <div class="navbar bg-base-100">
@@ -53,7 +57,12 @@
                             <li><a>Contact Us</a></li>
                         </ul>
                     </div>
-                    <a class="btn btn-ghost text-xl">Rinterio</a>
+                      <button class="btn btn-circle size-4.5 bg-[#ABEF5F]">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25" />
+                          </svg>
+                      </button>
+                    <a class="font-extrabold text-2xl">Rinterio</a>
                 </div>
                 <div class="navbar-center hidden lg:flex">
                     <ul class="menu menu-horizontal px-1">
@@ -64,11 +73,66 @@
                         <li><a>Contact Us</a></li>
                     </ul>
                 </div>
-                <div class="navbar-end">
-                    <button class="btn btn-active btn-secondary ">Book Consult</button>
+                    <button class="btn bg-[#FFFFFF] btn-circle ">
+                        <svg
+                          xmlns="http://www.w3.org/2000/svg"
+                          class="h-5 w-5"
+                          fill="none"
+                          viewBox="0 0 24 24"
+                          stroke="currentColor">
+                          <path
+                            stroke-linecap="round"
+                            stroke-linejoin="round"
+                            stroke-width="2"
+                            d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
+                        </svg>
+                      </button>
+                      <div tabindex="0" role="button" class="btn bg-[#FFFFFF] btn-circle">
+                        <div class="indicator">
+                          <svg
+                            xmlns="http://www.w3.org/2000/svg"
+                            class="h-5 w-5"
+                            fill="none"
+                            viewBox="0 0 24 24"
+                            stroke="currentColor">
+                            <path
+                              stroke-linecap="round"
+                              stroke-linejoin="round"
+                              stroke-width="2"
+                              d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z" />
+                          </svg>
+                        </div>
+                    </div>
+                    <div class="navbar-end">
+                        <button class="btn btn-wide rounded-3xl bg-[#ABEF5F80]">Book Consult
+                            <button class="btn btn-circle size-4.5 bg-black -z-7">
+                                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+                                    <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25" />
+                                  </svg>
+                        </button>
+                        </button>
+                    </div>
                 </div>
             </div>
         </nav>
+
+        <!-- Creating Hero Section -->
+       <div class="flex justify-center items-center">
+        <img src="./assets/banner.png" alt="barn house image">
+       </div>
+       <div class="text-center">
+        <h1 class="text-6xl font-extrabold my-7">A barn house of this design has a striking appearance</h1>
+        <p class="text-[#494949] mb-7">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents, and large windows that flood the space with natural light.</p>
+        <div class="navbar-center">
+            <button class="btn btn-wide rounded-3xl bg-[#ABEF5F80]">View Details
+                <button class="btn btn-circle size-4.5 bg-[#ABEF5F]">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25" />
+                      </svg>
+                  </button>
+            </button>
+        </div>
+       </div>
     </header>
     <main>
 
@@ -79,3 +143,12 @@
 </body>
 
 </html>
+
+
+
+
+
+
+
+
+
