completed our work process section

--- a/index.html
+++ b/index.html
@@ -138,18 +138,17 @@
         <h1 class="text-6xl font-extrabold my-7">A barn house of this design has a striking appearance</h1>
         <p class="text-[#494949] mb-7">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents, and large windows that flood the space with natural light.</p>
         <div class="navbar-center">
-            <button class="btn btn-wide rounded-3xl bg-[#ABEF5F80]">View Details
-                <button class="btn btn-circle size-4.5 bg-[#ABEF5F]">
-                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
-                        <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25" />
-                      </svg>
-                  </button>
-            </button>
+            <button class="btn btn-wide rounded-3xl bg-[#ABEF5F80]">View Details</button>
+            <button class="btn btn-circle size-4.5 bg-[#ABEF5F]  -ml-20 ">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25" />
+                  </svg>
+              </button>
         </div>
        </div>
     </header>
-    <main>
-<section class="bg-base-200 w-full mt-20">
+    <main class=" md:container ">
+<section class="bg-base-200  mt-20 w-screen">
     <!-- Creating thoughtful liveable spaces -->
     <img src="./assets/Vector.png" alt="image of vector" class="ml-20 pt-10">
     <div class="flex">
@@ -183,6 +182,69 @@
               class="max-w-sm rounded-lg shadow-2xl w-96 h-full">
           </div>
       </div>
+
+      <!-- Number of reviews and member section -->
+      <div class="stats stats-vertical lg:stats-horizontal shadow mt-20 ml-40 w-9/12">
+        <div class="stat">
+          <div class="stat-title "><i class="fa-regular fa-message ml-5"></i></div>
+          <div class="stat-value text-[#494949]">235+</div>
+          <div class="stat-desc text-[#737373]">Happy Client Review</div>
+        </div>
+      
+        <div class="stat">
+          <div class="stat-title"><i class="fa-regular fa-building ml-5"></i></div>
+          <div class="stat-value text-[#494949]">50+</div>
+          <div class="stat-desc text-[#737373]">Work Departments</div>
+        </div>
+      
+        <div class="stat">
+          <div class="stat-title"><i class="fa-solid fa-users ml-5"></i></div>
+          <div class="stat-value text-[#494949]">30k+</div>
+          <div class="stat-desc text-[#737373]">Our Happy Client</div>
+        </div>
+        <div class="stat">
+          <div class="stat-title"><i class="fa-solid fa-user-group ml-5"></i>></div>
+          <div class="stat-value text-[#494949]">307+</div>
+          <div class="stat-desc text-[#737373]">Staff Members</div>
+        </div>
+      </div>
+
+<!-- Our work process section -->
+ <div class="mt-20">
+    <button class="btn w-40 rounded-3xl bg-[#FFFFFF]  mb-5 align-middle"><i class="fa-solid fa-arrow-right"></i>How we works</button>
+    <h1 class="text-4xl font-bold text-[#212121] text-center mb-5">Our Works Process</h1>
+    <p class="font-medium text-xs text-center  mb-10">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+    <div class="flex justify-evenly">
+        <div class="card bg-primary text-primary-content w-64 bg-[#E7C1D3]">
+            <div class="card-body">
+                <img src="./assets/concept.png" alt="" class="w-12">
+              <h2 class="card-title text-sm font-extrabold text-[#1C1C1C]">Concept</h2>
+              <p class="text-xs font-medium text-[#494949]">The barn house captivates with its blend of rustic charm and modern.</p>
+            </div>
+          </div>
+        <div class="card bg-primary text-primary-content w-64 bg-[#EFDA6E]">
+            <div class="card-body">
+                <img src="./assets/flow-chart.png" alt="" class="w-12">
+              <h2 class="card-title text-sm font-extrabold text-[#1C1C1C]">Design Process</h2>
+              <p class="text-xs font-medium text-[#494949]">The barn house captivates with its blend of rustic charm and modern.</p>
+            </div>
+          </div>
+        <div class="card bg-primary text-primary-content w-64 bg-[#A4DAC3]">
+            <div class="card-body">
+                <img src="./assets/vision.png" alt="" class="w-12">
+              <h2 class="card-title text-sm font-extrabold text-[#1C1C1C]">Supervision</h2>
+              <p class="text-xs font-medium text-[#494949]">The barn house captivates with its blend of rustic charm and modern.</p>
+            </div>
+          </div>
+        <div class="card bg-primary text-primary-content w-64 bg-[#77AAEA]">
+            <div class="card-body">
+                <img src="./assets/budget-planning.png" alt="" class="w-12">
+              <h2 class="card-title text-sm font-extrabold text-[#1C1C1C]">Budget Planning</h2>
+              <p class="text-xs font-medium text-[#494949]">The barn house captivates with its blend of rustic charm and modern.</p>
+            </div>
+          </div>
+    </div>
+ </div>
 </section>
     </main>
     <footer>
