--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
        </div>
     </header>
     <main class=" md:container ">
-<section class="bg-base-200  mt-20 w-screen">
+<section class="bg-base-200  mt-20 w-screen pb-20">
     <!-- Creating thoughtful liveable spaces -->
     <img src="./assets/Vector.png" alt="image of vector" class="ml-20 pt-10">
     <div class="flex">
@@ -211,7 +211,7 @@
 
 <!-- Our work process section -->
  <div class="mt-20">
-    <button class="btn w-40 rounded-3xl bg-[#FFFFFF]  mb-5 align-middle"><i class="fa-solid fa-arrow-right"></i>How we works</button>
+    <button class="btn w-40 rounded-3xl bg-[#FFFFFF]  mb-5 flex justify-center items-center mx-auto"><i class="fa-solid fa-arrow-right"></i>How we works</button>
     <h1 class="text-4xl font-bold text-[#212121] text-center mb-5">Our Works Process</h1>
     <p class="font-medium text-xs text-center  mb-10">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
     <div class="flex justify-evenly">
@@ -246,6 +246,65 @@
     </div>
  </div>
 </section>
+
+<!-- Our latest Portfolio section -->
+<section>
+  <button class="btn btn-wide rounded-3xl bg-[#ABEF5F] flex justify-center items-center mx-auto mt-10"><i class="fa-solid fa-arrow-right"></i>Explore our Latest works</button>
+  <div class="mb-5">
+    <h1 class="text-[#212121] text-4xl font-bold text-center mt-5">Our Latest Portfolio</h1>
+    <p class="text-[#494949] text-xs font-medium mt-3 text-center">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+  </div>
+  <div class="grid grid-cols-3">
+    <div class="card card-side bg-[#FFFFFF] border-solid border-2 border-[#E9E9E9] w-2/5 ml-20 col-span-2 ">
+      <figure class="ml-5">
+     <img src="./assets/img1.png" alt="" class="w-64 mx-10">
+      </figure>
+      <div class="card-body">
+        <h2 class="card-title text-[#494949] font-extrabold text-base">Commercial</h2>
+        <p class="text-[#737373] text-xs font-medium mt-3 mb-3">The barn house captivates with its blend of rustic charm and modern. The barn house captivates with its blend of rustic charm and modern .</p>
+        <p>View Details</p>
+        <button class="btn btn-circle size-4.5 bg-[#ABEF5F] ml-24 -mt-10">
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+              <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25" />
+            </svg>
+        </button>
+      </div>
+    </div>
+    <div class="card card-side bg-[#FFFFFF] border-solid border-2 border-[#E9E9E9] w-2/5 ml-20">
+      <figure class="ml-5">
+     <img src="./assets/img2.png" alt="" class="w-64 mx-10">
+      </figure>
+    </div>
+    <div class="card card-side bg-[#FFFFFF] border-solid border-2 border-[#E9E9E9] w-2/5 ml-20">
+      <figure class="ml-5">
+     <img src="./assets/img3.png" alt="" class="w-64 mx-10">
+      </figure>
+    </div>
+    <div class="card card-side bg-[#FFFFFF] border-solid border-2 border-[#E9E9E9] w-2/5 ml-20">
+      <figure class="ml-5">
+     <img src="./assets/img4.png" alt="" class="w-64 mx-10">
+      </figure>
+      <div class="card-body">
+        <h2 class="card-title text-[#494949] font-extrabold text-base">Commercial</h2>
+        <p class="text-[#737373] text-xs font-medium mt-3 mb-3">The barn house captivates with its blend of rustic charm and modern. The barn house captivates with its blend of rustic charm and modern .</p>
+        <p>View Details</p>
+        <button class="btn btn-circle size-4.5 bg-[#ABEF5F] ml-24 -mt-10">
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+              <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25" />
+            </svg>
+        </button>
+      </div>
+    </div>
+    <div class="card card-side bg-[#FFFFFF] border-solid border-2 border-[#E9E9E9] w-2/5 ml-20">
+      <figure class="ml-5">
+     <img src="./assets/img5.png" alt="" class="w-64 mx-10">
+      </figure>
+    </div>
+  </div>
+</section>
+<div class="bg-base-200  mt-20 w-screen pb-20">
+
+</div>
     </main>
     <footer>
 
