startes read our artile section

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         </div>
        </div>
     </header>
-    <main class=" md:container ">
+    <main class="  md:container mx-auto ">
 <section class="bg-base-200  mt-20 w-screen pb-20">
     <!-- Creating thoughtful liveable spaces -->
     <img src="./assets/Vector.png" alt="image of vector" class="ml-20 pt-10">
@@ -249,7 +249,7 @@
 
 <!-- Our latest Portfolio section -->
 <section>
-  <button class="btn btn-wide rounded-3xl bg-[#ABEF5F] flex justify-center items-center mx-auto mt-10"><i class="fa-solid fa-arrow-right"></i>Explore our Latest works</button>
+  <button class="btn btn-wide rounded-3xl  bg-[#ABEF5F33]  flex justify-center items-center mx-auto mt-10"><i class="fa-solid fa-arrow-right"></i>Explore our Latest works</button>
   <div class="mb-5">
     <h1 class="text-[#212121] text-4xl font-bold text-center mt-5">Our Latest Portfolio</h1>
     <p class="text-[#494949] text-xs font-medium mt-3 text-center">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
@@ -301,10 +301,39 @@
       </figure>
     </div>
   </div>
-</section>
-<div class="bg-base-200  mt-20 w-screen pb-20">
 
-</div>
+  <!-- Read our article and news section -->
+</section>
+<section class="bg-base-200  mt-20 w-screen pt-10">
+  <button class="btn btn-wide rounded-3xl  bg-[#ABEF5F33]  flex justify-center items-center mx-auto mt-10"><i class="fa-solid fa-arrow-right"></i>Rinterio News</button>
+  <h1 class="text-[#212121] text-4xl font-bold text-center mt-5">Read Our Articles and News</h1>
+  <p class="text-[#494949] text-xs font-medium text-center mt-3">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+  <div class="card bg-base-100 w-96 shadow-xl">
+    <figure>
+<img src="./assets/article1.png" alt="" class="w-80">
+    </figure>
+    <div class="card-body"> 
+      <div class="inline-flex gap-2 -mt-3">
+        <div class="text-[#737373] inline-flex gap-2">
+          <i class="fa-solid fa-calendar-days"></i>
+          <h4>July14, 2024 </h4>
+        </div>
+        <div class="text-[#737373] inline-flex gap-2">
+          <i class="fa-solid fa-user"></i> 
+          <h4>By Admin</h4>
+        </div>
+      </div>
+      <h2 class="card-title">How to choose the furniture right  of your home.</h2>
+      <p>The barn house captivates with its blend of rustic charm and modern. </p>
+      <p>Read More</p>
+      <button class="btn btn-circle size-4.5 bg-[#ABEF5F] ml-24 -mt-10">
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+            <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25" />
+          </svg>
+      </button>
+    </div>
+  </div>
+</section>
     </main>
     <footer>
 
