completed lets talk next project section

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   </style>
 </head>
 
-<body class="font-manrope">
+<body class="font-manrope overflow-x-hidden">
   <header class="mt-10 md:container mx-auto ">
     <nav>
       <div class="navbar bg-base-100">
@@ -139,8 +139,9 @@
       </div>
     </div>
   </header>
-  <main class="  md:container mx-auto ">
+  <main class="md: mx-auto ">
     <section class="bg-base-200  mt-20 w-screen pb-20">
+
       <!-- Creating thoughtful liveable spaces -->
       <img src="./assets/Vector.png" alt="image of vector" class="ml-20 pt-10">
       <div class="flex">
@@ -307,7 +308,7 @@
 
       <!-- Read our article and news section -->
     </section>
-    <section class="bg-base-200  mt-20 w-screen pt-10">
+    <section class="bg-base-200 mt-20 w-screen pt-10">
       <button class="btn btn-wide rounded-3xl  bg-[#ABEF5F33]  flex justify-center items-center mx-auto mt-10"><i
           class="fa-solid fa-arrow-right"></i>Rinterio News</button>
       <h1 class="text-[#212121] text-4xl font-bold text-center mt-5">Read Our Articles and News</h1>
@@ -402,6 +403,51 @@
     </section>
 
     <!-- Lets connect section -->
+    <section class=" mt-10 w-screen ">
+    <div class="bg-cover pt-20 pb-20"style="background-image: url('./assets/bg.jpg');">
+      <button class="btn btn-wide rounded-3xl  bg-[#ABEF5F33]  flex justify-center items-center mx-auto"><i
+        class="fa-solid fa-arrow-right"></i>Let’s Connect</button>
+        <h1 class="text-[#212121] text-4xl font-bold text-center mt-5">Let’s Discuss Next Project</h1>
+        <p class="text-[#494949] font-medium text-xs text-center mt-3">The barn house captivates with its blend of rustic charm and modern 
+          sophistication, featuring weathered wood, sleek metal accents.</p>
+          <div class="flex ml-64 gap-4 mt-5">
+            <label class="block w-2/5 mb-5 ">
+              <input type="email" name="email" class="mt-1 px-3 py-2 bg-white border shadow-sm border-slate-300 placeholder-slate-400 focus:outline-none focus:border-sky-500 focus:ring-sky-500 block w-full rounded-full sm:text-sm focus:ring-1" placeholder="First Name*" />
+            </label>
+            <label class="block w-2/5">
+              <input type="email" name="email" class="mt-1 px-3 py-2 bg-white border shadow-sm border-slate-300 placeholder-slate-400 focus:outline-none focus:border-sky-500 focus:ring-sky-500 block w-full rounded-full sm:text-sm focus:ring-1" placeholder="Last Name*" />
+            </label>
+          </div>
+          <div class="flex ml-64 gap-4">
+            <label class="block w-2/5">
+              <input type="email" name="email" class="mt-1 px-3 py-2 bg-white border shadow-sm border-slate-300 placeholder-slate-400 focus:outline-none focus:border-sky-500 focus:ring-sky-500 block w-full rounded-full sm:text-sm focus:ring-1" placeholder="Phone Number*" />
+            </label>
+            <label class="block w-2/5">
+              <input type="email" name="email" class="mt-1 px-3 py-2 bg-white border shadow-sm border-slate-300 placeholder-slate-400 focus:outline-none focus:border-sky-500 focus:ring-sky-500 block w-full rounded-full sm:text-sm focus:ring-1" placeholder="Email Number*" />
+            </label>
+          </div>
+        <label class="form-control w-2/3 ml-64 mt-5 ">
+          <textarea class="textarea textarea-bordered h-32 rounded-md" placeholder="Write your message here"></textarea>
+        </label>
+        <input
+  type="text"
+  placeholder="" 
+  class="input input-bordered input-xs w-2/3 h-14  rounded-full mt-3 ml-64 bg-[#ABEF5F]" />
+  <div class="flex items-center justify-center -mt-14  ">
+    <div>
+      <p class="text-center">Send Mail</p>
+    </div>
+    <div>
+      <button class="btn btn-circle bg-black text-white ">
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+          stroke="currentColor" class="size-6">
+          <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25" />
+        </svg>
+      </button>
+    </div>
+  </div>
+    </div>
+    </section>
   </main>
   <footer>
 
