completed footer section

--- a/index.html
+++ b/index.html
@@ -433,11 +433,11 @@
   type="text"
   placeholder="" 
   class="input input-bordered input-xs w-2/3 h-14  rounded-full mt-3 ml-64 bg-[#ABEF5F]" />
-  <div class="flex items-center justify-center -mt-14  ">
-    <div>
+  <div class="flex items-center justify-center -mt-14 gap-2 ">
+    <div class="pt-1 font-extrabold text-sm">
       <p class="text-center">Send Mail</p>
     </div>
-    <div>
+    <div class="pt-1">
       <button class="btn btn-circle bg-black text-white ">
         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
           stroke="currentColor" class="size-6">
@@ -449,9 +449,44 @@
     </div>
     </section>
   </main>
-  <footer>
 
-  </footer>
+  <!-- Creating footer section -->
+    <footer class="footer footer-center bg-[#1C1C1C] text-base-content rounded w-screen pt-24">
+      <div class="flex items-center justify-center -mt-14 gap-2 ">
+        <div class="pt-1">
+          <button class="btn btn-circle size-4.5 bg-[#ABEF5F] ">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+              stroke="currentColor" class="size-6">
+              <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25" />
+            </svg>
+          </button>
+        </div>
+        <div class="pt-1 font-extrabold text-sm">
+          <p class="text-center text-2xl font-extrabold text-[#E9E9E9]">Rinterio</p>
+        </div>
+      </div>
+      <p class="text-[#737373] text-base font-medium text-center -mt-5">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+      <nav class="grid grid-flow-col gap-20 text-[#E9E9E9]">
+        <a class="link link-hover">Home</a>
+        <a class="link link-hover">Services</a>
+        <a class="link link-hover">Portfolio</a>
+        <a class="link link-hover">Blogs</a>
+        <a class="link link-hover">Contact Us</a>
+      </nav>
+      <div class="navbar-center flex">
+        <div>
+          <button class="btn btn-wide rounded-3xl bg-[#ABEF5F]">Book Consult</button>
+        </div>
+        <div class="-ml-5">
+          <button class="btn btn-circle bg-black text-white -ml-20">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+              stroke="currentColor" class="size-6">
+              <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25" />
+            </svg>
+          </button>
+        </div>
+      </div>
+    </footer>
 </body>
 
 </html>
