--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
         <h1 class="text-4xl font-bold text-[#212121] text-center mb-5">Our Works Process</h1>
         <p class="font-medium text-xs text-center  mb-10">The barn house captivates with its blend of rustic charm and
           modern sophistication, featuring weathered wood, sleek metal accents.</p>
-        <div class="flex justify-evenly">
+        <div class="flex gap-x-5 ml-40">
           <div class="card bg-primary text-primary-content w-64 bg-[#E7C1D3]">
             <div class="card-body">
               <img src="./assets/concept.png" alt="" class="w-12">
@@ -246,7 +246,7 @@
     </section>
 
     <!-- Our latest Portfolio section -->
-    <section>
+    <section class="ml-28">
       <button class="btn btn-wide rounded-3xl  bg-[#ABEF5F33]  flex justify-center items-center mx-auto mt-10"><i
           class="fa-solid fa-arrow-right"></i>Explore our Latest works</button>
       <div class="mb-5">
@@ -254,35 +254,41 @@
         <p class="text-[#494949] text-xs font-medium mt-3 text-center">The barn house captivates with its blend of
           rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
       </div>
-      <div class="grid grid-cols-3">
-        <div class="card card-side bg-[#FFFFFF] border-solid border-2 border-[#E9E9E9] w-2/5 ml-20 col-span-2 ">
-          <figure class="ml-5">
-            <img src="./assets/img1.png" alt="" class="w-64 mx-10">
-          </figure>
-          <div class="card-body">
-            <h2 class="card-title text-[#494949] font-extrabold text-base">Commercial</h2>
-            <p class="text-[#737373] text-xs font-medium mt-3 mb-3">The barn house captivates with its blend of rustic
-              charm and modern. The barn house captivates with its blend of rustic charm and modern .</p>
-            <p>View Details</p>
-            <button class="btn btn-circle size-4.5 bg-[#ABEF5F] ml-24 -mt-10">
-              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                stroke="currentColor" class="size-6">
-                <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25" />
-              </svg>
-            </button>
+      <div class="grid grid-cols-3 auto-rows-[300px] gap-3 my-10 ">
+          <div class="card card-side bg-[#FFFFFF] border-solid border-2 border-[#E9E9E9] w-15 ml-20 h-52 col-span-2">
+            <figure class="ml-5">
+              <img src="./assets/img1.png" alt="" class="w-64 mx-10 mt-5 mb-5">
+            </figure>
+            <div class="card-body ">
+              <h2 class="card-title text-[#494949] font-extrabold text-base -mt-5 ">Commercial</h2>
+              <p class="text-[#737373] text-xs font-medium  mb-5">The barn house captivates with its blend of rustic
+                charm and modern. The barn house captivates with its blend of rustic charm and modern .</p>
+                <div class="flex gap-2 mt-20">
+                  <div class="-mt-20 ">
+                    <p class="text-xl font-extrabold">View Details</p>
+                  </div>
+                  <div class="-mt-24">
+                    <button class="btn btn-circle size-4.5 bg-[#ABEF5F]">
+                      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                        stroke="currentColor" class="size-6">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25" />
+                      </svg>
+                    </button>
+                  </div>
+                </div>
+            </div>
           </div>
-        </div>
-        <div class="card card-side bg-[#FFFFFF] border-solid border-2 border-[#E9E9E9] w-2/5 ml-20">
-          <figure class="ml-5">
-            <img src="./assets/img2.png" alt="" class="w-64 mx-10">
-          </figure>
-        </div>
-        <div class="card card-side bg-[#FFFFFF] border-solid border-2 border-[#E9E9E9] w-2/5 ml-20">
+          <div class="card card-side bg-[#FFFFFF] border-solid border-2 border-[#E9E9E9] w-80 h-52">
+            <figure class="ml-5">
+              <img src="./assets/img2.png" alt="" class="w-64 mx-10">
+            </figure>
+          </div>
+        <div class="card card-side bg-[#FFFFFF] border-solid border-2 border-[#E9E9E9] w-80 h-52 ml-20">
           <figure class="ml-5">
             <img src="./assets/img3.png" alt="" class="w-64 mx-10">
           </figure>
         </div>
-        <div class="card card-side bg-[#FFFFFF] border-solid border-2 border-[#E9E9E9] w-2/5 ml-20">
+        <div class="card card-side bg-[#FFFFFF] border-solid border-2 border-[#E9E9E9] w-96 h-52 ">
           <figure class="ml-5">
             <img src="./assets/img4.png" alt="" class="w-64 mx-10">
           </figure>
@@ -299,7 +305,7 @@
             </button>
           </div>
         </div>
-        <div class="card card-side bg-[#FFFFFF] border-solid border-2 border-[#E9E9E9] w-2/5 ml-20">
+        <div class="card card-side bg-[#FFFFFF] border-solid border-2 border-[#E9E9E9] w-80 h-52">
           <figure class="ml-5">
             <img src="./assets/img5.png" alt="" class="w-64 mx-10">
           </figure>
@@ -473,7 +479,7 @@
         <a class="link link-hover">Blogs</a>
         <a class="link link-hover">Contact Us</a>
       </nav>
-      <div class="navbar-center flex">
+      <div class="navbar-center flex pb-10">
         <div>
           <button class="btn btn-wide rounded-3xl bg-[#ABEF5F]">Book Consult</button>
         </div>
