completed our latest portfolio section

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   </style>
 </head>
 
-<body class="font-manrope overflow-x-hidden">
+<body class="font-manrope ">
   <header class="mt-10 md:container mx-auto ">
     <nav>
       <div class="navbar bg-base-100">
@@ -246,15 +246,15 @@
     </section>
 
     <!-- Our latest Portfolio section -->
-    <section class="ml-28">
-      <button class="btn btn-wide rounded-3xl  bg-[#ABEF5F33]  flex justify-center items-center mx-auto mt-10"><i
+    <section class="ml-28 bg-[#FFFFFF]">
+      <button class="btn btn-wide rounded-3xl  bg-[#ABEF5F33]  flex justify-center items-center mx-auto mt-28"><i
           class="fa-solid fa-arrow-right"></i>Explore our Latest works</button>
       <div class="mb-5">
-        <h1 class="text-[#212121] text-4xl font-bold text-center mt-5">Our Latest Portfolio</h1>
-        <p class="text-[#494949] text-xs font-medium mt-3 text-center">The barn house captivates with its blend of
+        <h1 class="text-[#212121] text-4xl font-bold text-center mt-10">Our Latest Portfolio</h1>
+        <p class="text-[#494949] text-xs font-medium mt-7 text-center">The barn house captivates with its blend of
           rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
       </div>
-      <div class="grid grid-cols-3 auto-rows-[300px] gap-3 my-10 ">
+      <div class="grid grid-cols-3 auto-rows-[300px] gap-3 my-10 mt-20">
           <div class="card card-side bg-[#FFFFFF] border-solid border-2 border-[#E9E9E9] w-15 ml-20 h-52 col-span-2">
             <figure class="ml-5">
               <img src="./assets/img1.png" alt="" class="w-64 mx-10 mt-5 mb-5">
@@ -280,17 +280,17 @@
           </div>
           <div class="card card-side bg-[#FFFFFF] border-solid border-2 border-[#E9E9E9] w-80 h-52">
             <figure class="ml-5">
-              <img src="./assets/img2.png" alt="" class="w-64 mx-10">
+              <img src="./assets/img2.png" alt="" class="w-64 ml-2">
             </figure>
           </div>
-        <div class="card card-side bg-[#FFFFFF] border-solid border-2 border-[#E9E9E9] w-80 h-52 ml-20">
+        <div class="card card-side bg-[#FFFFFF] border-solid border-2 border-[#E9E9E9] w-80 h-52 ml-20 -mt-20">
           <figure class="ml-5">
-            <img src="./assets/img3.png" alt="" class="w-64 mx-10">
+            <img src="./assets/img3.png" alt="" class="w-64 h-40 rounded-xl ml-2 ">
           </figure>
         </div>
-        <div class="card card-side bg-[#FFFFFF] border-solid border-2 border-[#E9E9E9] w-96 h-52 ">
+        <div class="card card-side bg-[#FFFFFF] border-solid border-2 border-[#E9E9E9] h-52 -ml-7 -mt-20">
           <figure class="ml-5">
-            <img src="./assets/img4.png" alt="" class="w-64 mx-10">
+            <img src="./assets/img4.png" alt="" class="w-72 p-10 m-10">
           </figure>
           <div class="card-body">
             <h2 class="card-title text-[#494949] font-extrabold text-base">Commercial</h2>
@@ -305,22 +305,22 @@
             </button>
           </div>
         </div>
-        <div class="card card-side bg-[#FFFFFF] border-solid border-2 border-[#E9E9E9] w-80 h-52">
+        <div class="card card-side bg-[#FFFFFF] border-solid border-2 border-[#E9E9E9] w-80 h-52 -mt-20">
           <figure class="ml-5">
-            <img src="./assets/img5.png" alt="" class="w-64 mx-10">
+            <img src="./assets/img5.png" alt="" class="w-64 h-40 rounded-xl ml-2">
           </figure>
         </div>
       </div>
 
       <!-- Read our article and news section -->
     </section>
-    <section class="bg-base-200 mt-20 w-screen pt-10">
+    <section class="bg-base-200 mt-10 w-screen pt-10">
       <button class="btn btn-wide rounded-3xl  bg-[#ABEF5F33]  flex justify-center items-center mx-auto mt-10"><i
           class="fa-solid fa-arrow-right"></i>Rinterio News</button>
       <h1 class="text-[#212121] text-4xl font-bold text-center mt-5">Read Our Articles and News</h1>
       <p class="text-[#494949] text-xs font-medium text-center mt-3">The barn house captivates with its blend of rustic
         charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
-      <div class="flex space-x-5 ml-28 mt-10 pb-20">
+      <div class="flex space-x-5 ml-28 mt-10 pb-10">
         <div class="card bg-base-100 w-96 shadow-xl">
           <figure>
             <img src="./assets/article1.png" alt="" class="w-80 mt-5">
