--- a/index.html
+++ b/index.html
@@ -45,16 +45,16 @@
   <header class="mt-10 md:container mx-auto ">
     <nav>
       <div class="navbar bg-base-100">
-        <div class="navbar-start mr-20">
+        <div class="navbar-start mr-5 md:mr-20">
           <button class="btn btn-circle size-4.5 bg-[#ABEF5F]">
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
               stroke="currentColor" class="size-6">
               <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25" />
             </svg>
           </button>
-          <a class="font-extrabold text-2xl">Rinterio</a>
+          <a class="font-extrabold text-xl md:text-2xl">Rinterio</a>
         </div>
-        <div class="navbar-center hidden lg:flex mr-32">
+        <div class="navbar-center hidden lg:flex mr-5 md:mr-32">
           <ul class="menu menu-horizontal px-1">
             <li><a>Home</a></li>
             <li><a>Services</a></li>
@@ -63,14 +63,14 @@
             <li><a>Contact Us</a></li>
           </ul>
         </div>
-        <button class="btn bg-[#FFFFFF] btn-circle mr-3">
-          <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+        <button class=" btn bg-[#FFFFFF] btn-circle mr-3 md:block hidden">
+          <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mt-2 ml-3" fill="none" viewBox="0 0 24 24" stroke="currentColor">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
               d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
           </svg>
         </button>
-        <div tabindex="0" role="button" class="btn bg-[#FFFFFF] btn-circle mr-20">
-          <div class="indicator">
+        <div tabindex="0" role="button" class="btn bg-[#FFFFFF] btn-circle mr-5 md:mr-20  md:block hidden">
+          <div class="indicator mt-3">
             <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
               stroke="currentColor">
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -78,17 +78,17 @@
             </svg>
           </div>
         </div>
-        <div class="navbar-end">
-          <button class="btn btn-wide rounded-3xl bg-[#ABEF5F]">Book Consult</button>
-          <button class="btn btn-circle bg-black text-white -ml-20">
+        <div class="navbar-end md:flex hidden">
+          <button class="btn btn-wide rounded-3xl bg-[#ABEF5F] mr-5 md:mr-64 pt-2 pb-1"><h1 class="text-lg md:text-xl font-extrabold">Book Consult</h1></button>
+          <button class="btn btn-circle bg-black text-white -ml-80">
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
               stroke="currentColor" class="size-6">
               <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25" />
             </svg>
           </button>
         </div>
-        <div class="dropdown">
-          <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+        <div class="dropdown lg:hidden">
+          <div tabindex="0" role="button" class="btn bg-white btn-circle">
             <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
               stroke="currentColor">
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" />
@@ -101,18 +101,6 @@
             <li><a>Portfolio</a></li>
             <li><a>Blogs</a></li>
             <li><a>Contact Us</a></li>
-            <li>
-              <div class="navbar-end">
-                <button class="btn btn-wide rounded-3xl bg-[#ABEF5F80]">Book Consult</button>
-                <button class="btn btn-circle size-4.5 bg-black -ml-20">
-                  <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                    stroke="currentColor" class="size-6">
-                    <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25" />
-                  </svg>
-                </button>
-              </div>
-            </li>
-
           </ul>
         </div>
       </div>
@@ -124,13 +112,13 @@
     <div class="flex justify-center items-center ">
       <img src="./assets/banner.png" alt="barn house image">
     </div>
-    <div class="text-center">
-      <h1 class="text-6xl font-extrabold my-7">A barn house of this design has a striking appearance</h1>
-      <p class="text-[#494949] mb-7">The barn house captivates with its blend of rustic charm and modern sophistication,
+    <div class="text-center px-5 md:px-0">
+      <h1 class="text-3xl md:text-6xl font-extrabold my-7">A barn house of this design has a striking appearance</h1>
+      <p class="text-[#494949] mb-7 text-sm md:text-base">The barn house captivates with its blend of rustic charm and modern sophistication,
         featuring weathered wood, sleek metal accents, and large windows that flood the space with natural light.</p>
-      <div class="navbar-center">
+      <div class="navbar-center flex flex-col md:flex-row justify-center gap-5 md:gap-0">
         <button class="btn btn-wide rounded-3xl bg-[#ABEF5F80]">View Details</button>
-        <button class="btn btn-circle size-4.5 bg-[#ABEF5F]  -ml-20 ">
+        <button class="btn btn-circle size-4.5 bg-[#ABEF5F]  md:-ml-20 ">
           <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
             stroke="currentColor" class="size-6">
             <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25" />
@@ -139,21 +127,21 @@
       </div>
     </div>
   </header>
-  <main class="md: mx-auto ">
+  <main class="mx-auto px-5 md:px-0">
     <section class="bg-base-200  mt-20 w-screen pb-20">
 
       <!-- Creating thoughtful liveable spaces -->
-      <img src="./assets/Vector.png" alt="image of vector" class="ml-20 pt-10">
-      <div class="flex">
-        <div class="ml-36">
+      <img src="./assets/Vector.png" alt="image of vector" class="ml-5 md:ml-20 pt-10">
+      <div class="flex flex-col md:flex-row items-center md:items-start">
+        <div class="md:ml-36">
           <button class="btn w-40 rounded-3xl bg-[#FFFFFF]  mb-5"><i class="fa-solid fa-arrow-right"></i> About
             Us</button>
-          <h1 class="text-4xl font-bold w-8/12">We design thoughtful, liveable spaces</h1>
-          <p class="py-6 w-3/5">
+          <h1 class="text-2xl md:text-4xl font-bold md:w-8/12">We design thoughtful, liveable spaces</h1>
+          <p class="py-6 w-full md:w-3/5">
             The barn house captivates with its blend of rustic charm and
             modern sophistication, featuring weathered wood, sleek metal accents.
           </p>
-          <div class="collapse bg-[#FFFFFF] w-7/12">
+          <div class="collapse bg-[#FFFFFF] md:w-7/12">
             <input type="radio" name="my-accordion-1" checked="checked" />
             <div class="-mt-20 ml-5"><img src="./assets/commercial.png" alt=""></div>
             <div class="collapse-title text-sm font-extrabold ml-20">Commercial</div>
@@ -161,7 +149,7 @@
               <p>The barn house captivates with its blend of rustic charm and modern.</p>
             </div>
           </div>
-          <div class="collapse bg-[#FFFFFF] mt-5 w-7/12">
+          <div class="collapse bg-[#FFFFFF] mt-5 md:w-7/12">
             <div class="-mt-20 ml-5"><img src="./assets/residential.png" alt=""></div>
             <input type="radio" name="my-accordion-2" checked="checked" />
             <div class="collapse-title text-sm font-extrabold ml-20">Residential</div>
@@ -170,8 +158,8 @@
             </div>
           </div>
         </div>
-        <div class="hero-content flex-col lg:flex-row-reverse mr-36 mt-10 -mb-3">
-          <img src="./assets/Rectangle.png" class="max-w-sm rounded-lg shadow-2xl w-96 h-full">
+        <div class="hero-content flex-col lg:flex-row-reverse md:mr-36 mt-10 -mb-3">
+          <img src="./assets/Rectangle.png" class="max-w-sm rounded-lg shadow-2xl w-full md:w-96 h-full">
         </div>
       </div>
 
